--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "facebookgraph": "https://github.com/denmercs/facebookgraph/tarball/master",
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.9",
     "knex-cleaner": "^1.3.0",
-    "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0",
+    "node-geocoder": "^3.25.1",
     "pg": "^7.18.1",
     "pinterest-node-api": "0.0.3",
     "sqlite3": "^4.1.1"
