--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.9",
     "knex-cleaner": "^1.3.0",
-    "node-geocoder": "^3.25.1",
+    "node-fetch": "^2.6.0",
     "pg": "^7.18.1",
     "pinterest-node-api": "0.0.3",
     "sqlite3": "^4.1.1"
